--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
         <aside id="sidebar"> 
         <div class="dark">
         <h3>What we do</h3> 
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. lorem</p>
         
         </div>
         </aside> 
